--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-* {
-    font-family: Inter, sans-serif;
+:root {
+    font-family: Inter, Helvetica, Arial, sans-serif;
     --scrollbar-width: 17px;
 }
-
-
 
 :root {
     scroll-behavior: smooth;
