--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,42 @@
     --scrollbar-width: 17px;
 }
 
+@media (max-aspect-ratio: 16/9) {
+    .app-container {
+        width: 60vw;
+        height: calc(9/16 * 60vw);
+        max-width: calc(0.6 * 1600px);
+        max-height: calc(0.6 * 1600px * 9/16);
+        min-width: calc(0.6 * 800px);
+        min-height: calc(0.6 * 800px * 9/16);
+    }
+    :root {
+        --gutter: clamp(5.25px, calc(9/16 * 60vw * 1/60), 10px);
+    }
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .app-container {
+        height: 60vh;
+        width: calc(16/9 * 60vh);
+        max-height: calc(0.6 * 900px);
+        max-width: calc(0.6 * 900px * 16/9);
+        min-height: calc(0.6 * 450px);
+        min-width: calc(0.6 * 450px * 16/9);
+    }
+    :root {
+        --gutter: clamp(5.25px, calc(60vh * 1/60), 10px);
+    }
+}
+
 :root {
     scroll-behavior: smooth;
+    --half-gutter: calc(var(--gutter) / 2);
+    --double-gutter: calc(var(--gutter) * 2);
+    --threefourth-gutter: calc(var(--gutter) * 0.75);
+    --threehalf-gutter: calc(var(--gutter) * 1.5);
+    --three-gutter: calc(var(--gutter) * 3);
+    --four-gutter: calc(var(--gutter) * 4);
 }
 
 .everything-container {
@@ -19,22 +53,16 @@
 
 .app-container{
     background-color: white;
-    height: 50vh;
-    width: 80vw;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    --gutter: 8px;
-    --half-gutter: calc(var(--gutter) / 2);
-    --double-gutter: calc(var(--gutter) * 2);
-    --threefourth-gutter: calc(var(--gutter) * 0.75);
-    --threehalf-gutter: calc(var(--gutter) * 1.5);
-    --three-gutter: calc(var(--gutter) * 3);
-    --four-gutter: calc(var(--gutter) * 4);
+    
     border-radius: var(--four-gutter);
     padding: var(--three-gutter);
 }
+
+
 
 .calendar-section {
     display: flex;
@@ -152,6 +180,7 @@
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    font-size: calc(2 * var(--gutter));
 }
 
 .gradient-positioner {
@@ -245,3 +274,26 @@
     background-color: blue;
 }
 
+.blur-popup {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+}
+
+div.hidden-popup {
+    visibility: hidden;
+    pointer-events: none;
+    z-index: -1;
+}
+
+.month-popup {
+    position: fixed;
+    width: 50vw;
+    height: 30vh;
+    background-color: white;
+    top: 35vh;
+    left: 25vw;
+}
